--- a/apps/template/src/App.less
+++ b/apps/template/src/App.less
@@ -1,5 +1,5 @@
-@primaryFont: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+@errorColor: "red";
 
-body {
-  font-family: @primaryFont;
+noscript {
+  background-color: @errorColor;
 }
